--- a/hw1.html
+++ b/hw1.html
@@ -47,7 +47,7 @@
         }
 
         /* Navbar links */
-        topnav a {
+        .nav-link {
             display: inline-block;
             color: #ac9e9e;
             text-align: center;
@@ -56,9 +56,9 @@
         }
 
         /* need to show a custimized image */
-        topnav a:hover {
-            background-color: #ddd;
-            color: black;
+        .nav-link:hover {
+            background-color: #999;
+            color: white;
         }
 
         .dropdown-bg {
@@ -78,6 +78,18 @@
             left: auto;
             right: auto;
             padding: 10px 10px;
+        }
+
+        .dropdown-bg a {
+            display: inline-block;
+            color: #ac9e9e;
+            text-align: center;
+            padding: 12px 12px;
+            text-decoration: none;
+        }
+
+        .dropdown-bg a:hover {
+            text-decoration: underline;
         }
 
         .dropdown-bg ul {
@@ -300,11 +312,11 @@
             vertical-align: middle;
             text-decoration: none;
         }
+
         .priv-policy:active {
             text-decoration: underline;
             color: white;
         }
-
     </style>
 </head>
 
@@ -318,10 +330,10 @@
                 <span class="nav-icon-left">
                     <img src="asset/Cream_Soda_sprite_001.png" alt="nav_icon1">
                 </span>
-                <a href="#NewArrivals">New Arrivals</a>
+                <a class="nav-link" href="#NewArrivals">New Arrivals</a>
 
                 <span class="dropdown">
-                    <a href="#Bags">Bags</a>
+                    <a class="nav-link" href="#Bags">Bags</a>
                     <div class="dropdown-bg">
                         <ul class="dropdown-col1-1">
                             <li>
@@ -350,7 +362,7 @@
                 </span>
 
                 <span class="dropdown">
-                    <a href="#Accesseries">Accesseries</a>
+                    <a class="nav-link" href="#Accesseries">Accesseries</a>
                     <ul class="dropdown-bg">
                         <ul class="dropdown-col2-1">
                             <li><a href="#">Love-on patches</a></li>
@@ -368,7 +380,7 @@
                 </span>
 
                 <span class="dropdown">
-                    <a href="#Experience">Experience</a>
+                    <a class="nav-link" href="#Experience">Experience</a>
                     <ul class="dropdown-bg">
                         <div class="dropdown-col3">
                             <img src="asset/dropdown_image_3.webp" alt="dp3">
@@ -379,13 +391,13 @@
                     </ul>
                 </span>
 
-                <a href="#About">About</a>
-                <a href="#SummerSale">Summer Sale</a>
+                <a class="nav-link" href="#About">About</a>
+                <a class="nav-link" href="#SummerSale">Summer Sale</a>
             </ul>
         </div>
         <div class="nav-right">
             <ul>
-                <a href="#Signin">Sign in</a>
+                <a class="nav-link" href="#Signin">Sign in</a>
                 <span class="nav-icon-right">
                     <img src="asset/shopping_bag_icon.png" alt="nav_icon2">
                     <img src="asset/search-icon.png" alt="nav_icon3">
@@ -463,7 +475,7 @@
     </figure>
     <footer>
         <a href="#PrivacyPolicy">
-            <p class="priv-policy" >
+            <p class="priv-policy">
                 Privacy Policy
             </p>
         </a>
