--- a/hw1.html
+++ b/hw1.html
@@ -57,8 +57,13 @@
 
         /* need to show a custimized image */
         .nav-link:hover {
-            background-color: #999;
-            color: white;
+            background: url("asset/line-clay-bg.svg");
+            content: "";
+            display: inline-block;
+            margin-right: 10px;
+            height: 25px;
+            vertical-align: bottom;
+            width: 25px;
         }
 
         .dropdown-bg {
