--- a/hw1.html
+++ b/hw1.html
@@ -57,13 +57,9 @@
 
         /* need to show a custimized image */
         .nav-link:hover {
-            background: url("asset/line-clay-bg.svg");
-            content: "";
-            display: inline-block;
-            margin-right: 10px;
-            height: 25px;
-            vertical-align: bottom;
-            width: 25px;
+            background: url("asset/line-clay-bg.svg") bottom repeat-x;
+            text-decoration: none;
+            padding-bottom: 5px;
         }
 
         .dropdown-bg {
