--- a/hw1.html
+++ b/hw1.html
@@ -13,10 +13,10 @@
     </header>
     <topnav>
         <ul>
-            <li class="nav-bar"><img src="asset/Cream_Soda_sprite_001.png" alt="nav_icon1"></li>
-            <li class="nav-bar"><a class="nav-link" href="#NewArrivals">New Arrivals</a></li>
+            <li class="nav-left"><img src="asset/Cream_Soda_sprite_001.png" alt="nav_icon1"></li>
+            <li class="nav-left"><a class="nav-link" href="#NewArrivals">New Arrivals</a></li>
 
-            <li class="nav-bar">
+            <li class="nav-left">
                 <div class="dropdown">
                     <a class="nav-link" href="#Bags">Bags</a>
                 </div>
@@ -48,7 +48,7 @@
 
             </li>
 
-            <li class="nav-bar">
+            <li class="nav-left">
                 <div class="dropdown">
                     <a class="nav-link" href="#Accesseries">Accesseries</a>
                 </div>
@@ -68,7 +68,7 @@
                 </ul>
 
             </li>
-            <li class="nav-bar">
+            <li class="nav-left">
                 <div class="dropdown">
                     <a class="nav-link" href="#Experience">Experience</a>
                 </div>
@@ -83,12 +83,14 @@
 
             </li>
 
-            <li class="nav-bar"><a class="nav-link" href="#About">About</a></li>
-            <li class="nav-bar"><a class="nav-link" href="#SummerSale">Summer Sale</a></li>
+            <li class="nav-left"><a class="nav-link" href="#About">About</a></li>
+            <li class="nav-left"><a class="nav-link" href="#SummerSale">Summer Sale</a></li>
 
-            <li class="nav-bar"><a class="nav-link" href="#Signin">Sign in</a></li>
-            <li class="nav-bar"><img src="asset/shopping_bag_icon.png" alt="nav_icon2"></li>
-            <li class="nav-bar"><img src="asset/search-icon.png" alt="nav_icon3"></li>
+
+            <li class="nav-right"><a class="nav-link" href="#Signin">Sign in</a></li>
+            <li class="nav-right"><img src="asset/shopping_bag_icon.png" alt="nav_icon2"></li>
+            <li class="nav-right"><img src="asset/search-icon.png" alt="nav_icon3"></li>
+
         </ul>
     </topnav>
 
