--- a/hw1.html
+++ b/hw1.html
@@ -13,7 +13,7 @@
     </header>
     <topnav>
         <ul>
-            <li class="nav-left"><img src="asset/Cream_Soda_sprite_001.png" alt="nav_icon1"></li>
+            <li class="nav-left-icon"><img src="asset/Cream_Soda_sprite_001.png" alt="nav_icon1"></li>
             <li class="nav-left"><a class="nav-link" href="#NewArrivals">New Arrivals</a></li>
 
             <li class="nav-left">
@@ -88,8 +88,8 @@
 
 
             <li class="nav-right"><a class="nav-link" href="#Signin">Sign in</a></li>
-            <li class="nav-right"><img src="asset/shopping_bag_icon.png" alt="nav_icon2"></li>
-            <li class="nav-right"><img src="asset/search-icon.png" alt="nav_icon3"></li>
+            <li class="nav-right-icon"><img src="asset/shopping_bag_icon.png" alt="nav_icon2"></li>
+            <li class="nav-right-icon"><img src="asset/search-icon.png" alt="nav_icon3"></li>
 
         </ul>
     </topnav>
