--- a/hw1.html
+++ b/hw1.html
@@ -110,12 +110,22 @@
         <div class="bg-row">
             <div class="bg-column2-1">
                 <img src="asset/sea.jpg" alt="bg2-1">
+                <div class="overlay">
+                    <p class="overlay-text">
+                        Island
+                    </p>
+                </div>
                 <div class="bg-hover2-1">
                     <img src="asset/island.jpg" alt="bg-hover2-1">
                 </div>
             </div>
             <div class="bg-column2-2">
                 <img src="asset/cars.jpg" alt="bg2-2">
+                <div class="overlay">
+                    <p class="overlay-text">
+                        Dodge
+                    </p>
+                </div>
                 <div class="bg-hover2-2">
                     <img src="asset/dodge.jpg" alt="bg-hover2-2">
                 </div>
@@ -131,12 +141,22 @@
             </div>
             <div class="bg-column3">
                 <img src="asset/jocker.jpg" alt="bg3-2">
+                <div class="overlay">
+                    <p class="overlay-text">
+                        Film
+                    </p>
+                </div>
                 <div class="bg-hover3-2">
                     <img src="asset/amc.png" alt="bg-hover3-2">
                 </div>
             </div>
             <div class="bg-column3">
                 <img src="asset/games.jpg" alt="bg3-3">
+                <div class="overlay">
+                    <p class="overlay-text">
+                        Switch
+                    </p>
+                </div>
                 <div class="bg-hover3-3">
                     <img src="asset/switch.jpg" alt="bg-hover3-3">
                 </div>
@@ -152,6 +172,11 @@
             </div>
             <div class="bg-column4-2">
                 <img src="asset/steak.jpg" alt="bg4-2">
+                <div class="overlay">
+                    <p class="overlay-text">
+                        Meal
+                    </p>
+                </div>
                 <div class="bg-hover4-2">
                     <img src="asset/restrautant.jpeg" alt="bg-hover4-2">
                 </div>
